# china-region-data

./: LICENSE  README.md  crawler.py  pyproject.toml
china_region_data/: __init__.py  data.json  datastructures.py  exceptions.py  utils.py
tests/: test_china_region_data.py  test_datastructures.py
