[tool.poetry]
name = "china-region-data"
version = "0.1.5"
description = "中国行政区域数据"
authors = ["abersheeran <me@abersheeran.com>"]
readme = "README.md"
license = "MIT"

homepage = "https://github.com/abersheeran/china-region-data"
repository = "https://github.com/abersheeran/china-region-data"
documentation = "https://github.com/abersheeran/china-region-data"
classifiers=[
    "Programming Language :: Python :: 3",
]

packages = [
    { include = "china_region_data" },
]

[tool.poetry.dependencies]
python = "^3.6"
cached_property = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.761"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
