[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = "中国行政区域数据"
license = "MIT"
name = "china-region-data"
readme = "README.md"
version = "2020.10"

classifiers = [
  "Programming Language :: Python :: 3",
]
documentation = "https://github.com/abersheeran/china-region-data"
homepage = "https://github.com/abersheeran/china-region-data"
repository = "https://github.com/abersheeran/china-region-data"

packages = [
  {include = "china_region_data"},
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.8.2"
black = {version = "*", allow-prereleases = true}
flake8 = "*"
mypy = "*"
pytest = "^5.2"
pytest-cov = "^2.10.1"
requests = "^2.22.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
